# wm_compe

./: .gitignore  2024_world_model_Competition_Baseline.ipynb  pyproject.toml  tdmpc_square.ipynb
wandb/run-20250223_054713-0fseccwi/files/: requirements.txt  wandb-metadata.json
